--- a/client/package.json
+++ b/client/package.json
@@ -29,5 +29,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "https://aqueous-plateau-65721.herokuapp.com/"
 }
